*new live session views

--- a/app/views/group_chats/teacher_view.html.slim
+++ b/app/views/group_chats/teacher_view.html.slim
@@ -109,7 +109,7 @@ javascript:
 
 div
   .tl
-    #steam style="text-align: center;"
+    #stream style="text-align: center;"
       iframe src = @livesessionurl
   .tr style="overflow: auto;"
     p#correct_option.mx-auto.my-auto.text-center Question Here
