*disable table hide by default

--- a/app/views/course_details/show.html.erb
+++ b/app/views/course_details/show.html.erb
@@ -64,7 +64,7 @@
 </table>
 
 <script>
-  $('.header').nextUntil('tr.header').slideToggle(1000);
+  //$('.header').nextUntil('tr.header').slideToggle(1000);
   $('.header').click(function(){
     $(this).find('span').text(function(_, value){return value=='-'?'+':'-'});
       $(this).nextUntil('tr.header').slideToggle(100, function(){
