--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -15,6 +15,7 @@ $primary-color: #1b5e20;
 // @import "active_admin/base";
 @import "arctic_admin/base";
 @import 'activeadmin/quill_editor_input';
+@import "active_admin/searchable_select";
 
 // Overriding any non-variable SASS must be done after the fact.
 // For example, to change the default status-tag color:
