show user todo, questions pdf view by chapter

--- a/app/views/questions/pdf_questions.html.erb
+++ b/app/views/questions/pdf_questions.html.erb
@@ -7,6 +7,14 @@
 </script>
 
 <div style="margin: 32px">
+  <label>Topics :</label>
+  <select name="topic" id="topicList">
+    <option value=''>Select Chapter</option>
+    <% @chapters_data.each do |key, value| %>
+      <%= raw("<option value='" + key.to_s + "'>" + value[0].to_s + "</option>") %>
+    <% end %>
+  </select>
+  <button onclick="getChapterQuestions()">Get Questions</button>
   <h3 style="margin-top: -2px"><%= raw("Total Questions : " + @questions_data.length.to_s) %></h3>
 </div>
 
@@ -23,3 +31,21 @@
     </div>
   <% end %>
 </div>
+
+<script type="text/javascript">
+
+  $(function () {
+    $("select").select2();
+  });
+
+  function getChapterQuestions() {
+    let chapterId = $("#topicList option:selected").val();
+    let subject = '<%= @subject %>';
+    if (chapterId == null){
+      alert('Chapter is not selected');
+      return
+    }
+    window.location = window.location.origin + "/questions/pdf_questions?subject=" + subject + "&topic=" + chapterId;
+  }
+
+</script>
