--- a/app/views/course_details/show.html.erb
+++ b/app/views/course_details/show.html.erb
@@ -37,7 +37,7 @@
   </tr>
 
   <tr>
-    <table style="margin-left: 16px; width:50%; ; margin-top: 30px">
+    <table style="margin-left: 16px; width:50%; margin-top: 30px">
       <tr class="header" style="text-align: center;">
         <th>Subject Name</th>
         <th>Topic Count</th>
@@ -52,7 +52,7 @@
   </tr>
 
   <tr>
-    <table id="chaper_table" style="margin-left: 16px; width:50%; ; margin-top: 30px">
+    <table id="chaper_table" style="margin-left: 16px; width:50%; margin-top: 30px">
       <tr class="header" style="text-align: center;">
         <th>Topic Name</th>
         <th>SubTopic Count</th>
