--- a/app/views/google_ads/report.html.erb
+++ b/app/views/google_ads/report.html.erb
@@ -1,8 +1,18 @@
-<h2>Google Ads Campaign Report</h2>
-<table style="margin-left: 16px; width:50%; ; margin-top: 30px">
+<head>
+  <style>
+    table, th, td {
+      border: 1px solid black;
+    }
+    tbody tr th {
+      font-size: 20px;
+    }
+  </style>
+</head>
+<h2 style="margin-left: 16px; margin-top: 30px">Google Ads Campaign Report</h2>
+<table style="margin-left: 16px; width:50%; margin-top: 30px">
   <tr class="header" style="text-align: center;">
-    <th>Day</th>
-    <th>Cost</th>
+    <th>Date</th>
+    <th>Total Cost</th>
   </tr>
   <% @report_data.each do |key, value| %>
     <tr style="text-align: center;">
