added help message for adding sequence id

--- a/app/views/tests/add_question.erb
+++ b/app/views/tests/add_question.erb
@@ -22,6 +22,7 @@
       Question Ids:
       <textarea placeholder="select questions from test or directly paste question ids (Required format : 1,2,3,4,5) ..." id="selectedIds"></textarea>
     </div>
+    <p>If you are adding questions from subjcet test then select sequenceId from  below (1 for chemistry and 2 for physics)</p>
     <select name="sequence" id="sequenceList">
       <option value=''>Sequence Id</option>
       <option value="0">0</option>
